--- a/src/App.css
+++ b/src/App.css
@@ -10,19 +10,18 @@
   position: relative;
   width: 100vw;
   height: 100vh;
-  background-color: #f8f8f8;
+  background-color: #f8f8f8; 
 }
-
 .background-image {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('https://cdn.pixabay.com/photo/2017/07/13/08/59/greenhouse-2499758_1280.jpg');
+  background-image: url('./resources/bg-plants.jpg');
   background-size: 100% 100%;
   background-position: center;
-  filter: brightness(0.8);
+  filter: brightness(0.6);
 }
 .content {
   display: flex;
@@ -30,26 +29,27 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
- top: 100px;
+  top: 100px;
   backdrop-filter: blur(4px);
   background-color: rgba(0,0,0,0.5);
-  gap: 20px;
+  gap: 20px; 
 }
 
 .landing_content {
- margin-top: 430px;
+ /* margin-top: 430px;
   margin-left: 100px;
   transform: translate(-50%, -50%);
   z-index: 1;
+  */
   text-align: center;
-  /* background-color: red; */
+  margin-left: 30px;
   width: 400px;
   height: 400px;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  gap: 10px;
+  gap: 10px; 
 }
 
 .content p,
@@ -66,10 +66,15 @@
   font-size: 25px;
 }
 
+/*
+old : #4caf50
+new : #136216
+
+*/
 .divider {
   width: 50px;
   height: 2px;
-  background-color: #4caf50;
+  background-color: #136216;
   margin: 10px 0;
 }
 
@@ -78,7 +83,7 @@
   font-size: 23px;
   border: none;
   border-radius: 5px;
-  background-color: #4caf50;
+  background-color: #136216;
   color: white;
   cursor: pointer;
   transition: background-color 0.3s ease;
@@ -86,7 +91,7 @@
 }
 
 .get-started-button:hover {
-  background-color: #45a049;
+  background-color: #136216;
 }
 
 /* ProductList.css */
