--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -12,7 +12,7 @@ body {
 
 /* Navbar */
 .navbar {
-    background-color: #4CAF50;
+    background-color: #136216;
     color: #fff!important;
     padding: 15px;
     display: flex;
@@ -198,7 +198,7 @@ body {
 /* ProductList.css */
 
 .product-button {
-    background-color: #4CAF50; /* Green */
+    background-color: #136216; /* Green */
     border: none;
     color: white;
     padding: 10px 20px;
@@ -212,7 +212,7 @@ body {
   }
   
   .product-button:hover {
-    background-color: #45a049;
+    background-color: #136216;
   }
   
   .product-button.added-to-cart {
